PIVOT-799 and PIVOT-800 fix
Changes:
- PIVOT-799 summary search fixed
- PIVOT-800 cube filtered item icon fixed
- fixed bootstrap and jquery script import overlap in common.ftl

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -407,12 +407,12 @@ ul.tree-browser {
 	letter-spacing: 1px;
 }
 
-.label .glyphicon {
+.label .fas {
 	display: none;
 	color: #c00;
 }
 
-.label.hover .glyphicon {
+.label.hover .fas {
 	display: inline-block;
 }
 
@@ -844,6 +844,13 @@ button.close {
 
 .dropdown-menu {
 	font-size: 14px;
+	padding: 10px;
+	overflow: scroll;
+	max-height: 400px;
+}
+
+.dropdown.open > .dropdown-menu {
+	display: list-item;
 }
 
 .dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover {
